--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frankie",
+  "name": "frankies-website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -12,9 +12,15 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "date-fns": "^2.30.0",
+    "framer-motion": "^10.13.0",
+    "gray-matter": "^4.0.3",
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
+    "remark": "^14.0.3",
+    "remark-html": "^15.0.2",
     "typescript": "5.1.6"
   }
 }
